--- a/TestWebRtc/html/index.html
+++ b/TestWebRtc/html/index.html
@@ -3,20 +3,23 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1" />
-  <title>WebRTC</title>
+  <title>LgVideoChat</title>
 </head>
 <body>
   <div>
     user id : <input id="user_id" type="text" >
-    <button id="btnRegister" onclick="StartSession()" >login</button>
+    <button id="btnRegister" onclick="StartSession()" >Login</button>
+    <button id="btnRetreiveList" onclick="ContactList()" >Retreive logined ID</button>
   </div>
   <div>
     peer id : <input id="peer_id" type="text" >
-    <button id="btnInvite" onclick="SendInvite()" >call</button>
-    <button id="btnAccept" onclick="SendAccept()" >accept</button>
-    <button id="btnDecline" onclick="SendDecline()" >decline</button>
-    <button id="btnBye" onclick="SendBye()" >bye</button>
-    <button id="btnClear" onclick="ClearLog()" >clear</button>
+    <button id="btnInvite" onclick="SendInvite()" >Call</button>
+    <button id="btnAccept" onclick="SendAccept()" >Accept</button>
+    <button id="btnDecline" onclick="SendDecline()" >Decline</button>
+    <button id="btnBye" onclick="SendBye()" >Bye</button>
+    <!--
+    <button id="btnClear" onclick="ClearLog()" >Clear</button>
+    -->
   </div>
 
   <table border="1">
