--- a/TestWebRtc/html/index.html
+++ b/TestWebRtc/html/index.html
@@ -52,7 +52,7 @@
   <h2>Video Chat </h2>
   <div>
     <p>user id : <input id="user_id" type="text" >
-    <button id="btnRegister" onclick="StartSession()" >login</button>
+    <button id="btnLogin" onclick="StartSession()" >login</button>
     <button id="btnRetreiveList" onclick="ContactList()" >Retreive logined ID</button>
     </p>
   </div>
