1. Check for Duplicate User ID  2. Add server-side password validation

--- a/TestWebRtc/html/index.html
+++ b/TestWebRtc/html/index.html
@@ -13,9 +13,7 @@
       <th>ID : </th>
       <td>
         <input id="userid_id" type="text" name="UserId_" placeholder="" required>
-      <!--
-        <button id="btnDuplicate" onclick="CheckDuplicateId()" >Duplicate</button>
-      -->
+        <button id="btnDuplicate" onclick="CheckDuplicateId()" >check id</button>
       </td>
     </tr>
     <tr>
