fix build error

--- a/TestWebRtc/html/index.html
+++ b/TestWebRtc/html/index.html
@@ -19,7 +19,7 @@
     <tr>
       <th>Password : </th>
       <td>
-        <input id="password_id" type="password" name="password" placeholder="" required>
+        <input id="password_id" type="password" name="password" minlength="10" placeholder="" required>
       </td>
     </tr>
     <tr>
@@ -34,7 +34,7 @@
     </tr>
     <tr>
       <th>Phone : </th>
-      <td><input id="phone_id" type="text" name="email" placeholder="ex)0123456789" required>
+      <td><input id="phone_id" type="text" name="phone" placeholder="ex)0123456789" required>
       </td>
     </tr>
     <tr>
