1. user information doesn't include '|' character 2. OTP should be the number, NOT other character

--- a/TestWebRtc/html/index.html
+++ b/TestWebRtc/html/index.html
@@ -20,7 +20,8 @@
     <tr>
       <th>Password : </th>
       <td>
-        <input id="password_id" type="password" name="password" minlength="10" placeholder="" required>
+        <input id="password_id" type="password" name="password" minlength="10" placeholder="" required> 
+        At least 1 alphabet/special character/number and length 10 ~ 15
       </td>
     </tr>
     <tr>
