--- a/TestWebRtc/html/index.html
+++ b/TestWebRtc/html/index.html
@@ -81,10 +81,10 @@
   <table border="1">
     <tr>
       <th>
-        Local video
+        Local
       </th>
       <th>
-        'Remote' video
+        Remote
       </th>
     </tr>
     <tr>
