--- a/TestWebRtc/html/index.html
+++ b/TestWebRtc/html/index.html
@@ -5,6 +5,28 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1" />
   <script src="qrcode.min.js"></script>
   <title>LgVideoChat</title>
+  <style>
+    .modal {
+      display: none;
+      position: fixed;
+      z-index: 1;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%
+      overflow: auto;
+      background-color: rgb(0,0,0);
+      background-color: rgba(0,0,0,0.4);
+    }
+
+    .modal-content {
+      background-color: #fefefe;
+      margin: 15% auto;
+      padding: 20px;
+      border: 1px solid #888;
+      width: 50%;
+    }
+  </style>
 </head>
 
 <body>
@@ -62,7 +84,8 @@
   <div>
     <p>user id : <input id="user_id" type="text" > password : <input id="user_passwd" type="password" > otp : <input id="otp_num" type="text" > 
     <button id="btnLogin" onclick="StartSession()" >login</button>
-    <button id="btnRetreiveList" onclick="ContactList()" >Retreive logined ID</button>
+    <button id="btnRetreiveList" onclick="ContactList()" >Retrieve logined ID</button>
+    <button id="btnChangeEmail" onclick="ChangeEmail()" >Change Email</button>
     </p>
   </div>
   <div>
@@ -101,6 +124,15 @@
 
   <div id="log">
 
+  </div>
+  <div id="accountModal" class="modal">
+    <div class="modal-content">
+      <span class="close">&times;</span>
+      <form id="infoForm">
+        New E-mail: <input type="email" id="new_email"><br>
+        <input type="submit" value="Submit">
+      </form>
+    </div>
   </div>
 </body>
 
