need password twice enter

--- a/TestWebRtc/html/index.html
+++ b/TestWebRtc/html/index.html
@@ -42,7 +42,8 @@
     <tr>
       <th>Password : </th>
       <td>
-        <input id="password_id" type="password" name="password" minlength="10" placeholder="" required> 
+        <input id="password_id_1" type="password" name="password" minlength="10" placeholder="" required> 
+        <input id="password_id_2" type="password" name="password" minlength="10" placeholder="" required> 
         At least 1 alphabet/special character/number and length 10 ~ 15
       </td>
     </tr>
@@ -95,9 +96,6 @@
     <button id="btnAccept" onclick="SendAccept()" >Accept</button>
     <button id="btnDecline" onclick="SendDecline()" >Decline</button>
     <button id="btnBye" onclick="SendBye()" >Bye</button>
-    <!--
-    <button id="btnClear" onclick="ClearLog()" >Clear</button>
-    -->
     </p>
   </div>
 
