add string of re-type password

--- a/TestWebRtc/html/index.html
+++ b/TestWebRtc/html/index.html
@@ -43,7 +43,7 @@
       <th>Password : </th>
       <td>
         <input id="password_id_1" type="password" name="password" minlength="10" placeholder="" required> 
-        <input id="password_id_2" type="password" name="password" minlength="10" placeholder="" required> 
+        <input id="password_id_2" type="password" name="password" minlength="10" placeholder="re-type password" required> 
         At least 1 alphabet/special character/number and length 10 ~ 15
       </td>
     </tr>
