apply notification of google authenticator with red font

--- a/TestWebRtc/html/index.html
+++ b/TestWebRtc/html/index.html
@@ -76,10 +76,13 @@
       <th>Google OTP KEY : </th>
       <td>
         <input id="google_key" type="text" name="Google" placeholder="" required size="50" readonly>
-        You should register Google Authenticator with QR code or key!
       </td>
     </tr>
     <div id="qrcode"></div>
+	<td>
+      <span style="color: red; font-size: 30px;">You must register Google Authenticator with QR code or key NOW!</span>
+    </td>
+
   <hr>
   <h2>Video Chat </h2>
   <div>
