--- a/TestWebRtc/html/index.html
+++ b/TestWebRtc/html/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1" />
@@ -75,7 +75,7 @@
         <button id="btnSubmit" onclick="SendUserInfo()">submit</button>
     </p>
     <tr>
-        <th>Google OTP KEY : </th>
+        <th id="google_id">Google OTP KEY : </th>
         <td>
             <input id="google_key" type="text" name="Google" placeholder="" required size="50" readonly>
         </td>
